src/objects/Job_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_SequenceNumber__c</fullName>
        <label>Bundle Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summarizedField>Job_Rate_Plan__c.Charges_without_a_Charge_Date__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Job_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Minimum_Next_Charge_Date_For_Product__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <summarizedField>Job_Rate_Plan__c.Minimum_Next_Charge_Date_For_Product__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>Product_Bundle__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Product__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Order Product Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Job_Rate_Plans__c</fullName>
        <label>Total Order Rate Plans</label>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>Vat Roll Up</label>
        <summarizedField>Job_Rate_Plan__c.Vat_Roll_Up__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Total__c</fullName>
        <label>Year 1 Net Total</label>
        <summarizedField>Job_Rate_Plan__c.Year_1_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Total__c</fullName>
        <label>Year 2 Net Total</label>
        <summarizedField>Job_Rate_Plan__c.Year_2_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Total__c</fullName>
        <label>Year 3 Net Total</label>
        <summarizedField>Job_Rate_Plan__c.Year_3_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan__c.Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order Product</label>
    <nameField>
        <label>Order Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>